# an-llm-flies-x-plane

./: .gitignore  CLAUDE.md  README.md  SPEC.md  pyproject.toml
sim_pilot/: __init__.py  __main__.py  bus.py  live_runner.py  tui.py
sim_pilot/config/: aircraft_c172.yaml  airport_defaults.yaml
sim_pilot/control/: __init__.py  bank_hold.py  centerline_rollout.py  pid.py  pitch_hold.py  tecs_lite.py
sim_pilot/core/: __init__.py  config.py  mission_manager.py  mode_manager.py  profiles.py  safety_monitor.py  state_estimator.py  types.py
sim_pilot/guidance/: __init__.py  flare_profile.py  lateral.py  pattern_manager.py  route_manager.py  runway_geometry.py
sim_pilot/llm/: __init__.py  conversation.py  responses_client.py  tools.py
sim_pilot/sim/: __init__.py  datarefs.py  logging.py  plotting.py  scenario.py  simple_dynamics.py  xplane_bridge.py
tests/: test_bus.py  test_centerline_rollout.py  test_cli.py  test_conversation.py  test_heartbeat_pump.py  test_lateral_rescue.py  test_live_intents.py  test_logging.py  test_mode_transitions.py  test_pattern_geometry.py  test_plotting.py  test_profiles.py  test_safety_monitor.py  test_scenario.py  test_status_display.py  test_tecs_lite.py  test_tool_dispatch.py  test_tui_input.py  test_xplane_bridge.py
